--- a/converter.ui
+++ b/converter.ui
@@ -51,7 +51,7 @@
               <property name="side">top</property>
             </layout>
             <child>
-              <object class="ttk.Entry" id="entry_6">
+              <object class="ttk.Entry" id="file_location_text_box">
                 <property name="text" translatable="yes">File location</property>
                 <layout manager="grid">
                   <property name="propagate">True</property>
@@ -59,7 +59,7 @@
               </object>
             </child>
             <child>
-              <object class="ttk.Button" id="button_3">
+              <object class="ttk.Button" id="select_file_button">
                 <property name="text" translatable="yes">Select</property>
                 <layout manager="grid">
                   <property name="column">1</property>
@@ -82,7 +82,7 @@
               <property name="side">top</property>
             </layout>
             <child>
-              <object class="ttk.Button" id="button_4">
+              <object class="ttk.Button" id="convert_button">
                 <property name="text" translatable="yes">Convert</property>
                 <layout manager="grid">
                   <property name="propagate">True</property>
@@ -90,8 +90,8 @@
               </object>
             </child>
             <child>
-              <object class="ttk.Button" id="button_5">
-                <property name="text" translatable="yes">Pause</property>
+              <object class="ttk.Button" id="play_pause_button">
+                <property name="text" translatable="yes">Play</property>
                 <layout manager="grid">
                   <property name="column">1</property>
                   <property name="propagate">True</property>
