--- a/converter.ui
+++ b/converter.ui
@@ -53,6 +53,7 @@
             <child>
               <object class="ttk.Entry" id="file_location_text_box">
                 <property name="text" translatable="yes">File location</property>
+                <property name="validatecommand_args">validate_location</property>
                 <layout manager="grid">
                   <property name="propagate">True</property>
                 </layout>
@@ -60,6 +61,7 @@
             </child>
             <child>
               <object class="ttk.Button" id="select_file_button">
+                <property name="command">select_file</property>
                 <property name="text" translatable="yes">Select</property>
                 <layout manager="grid">
                   <property name="column">1</property>
@@ -83,6 +85,7 @@
             </layout>
             <child>
               <object class="ttk.Button" id="convert_button">
+                <property name="command">convert</property>
                 <property name="text" translatable="yes">Convert</property>
                 <layout manager="grid">
                   <property name="propagate">True</property>
@@ -91,6 +94,7 @@
             </child>
             <child>
               <object class="ttk.Button" id="play_pause_button">
+                <property name="command">play_music</property>
                 <property name="text" translatable="yes">Play</property>
                 <layout manager="grid">
                   <property name="column">1</property>
