--- a/converter.ui
+++ b/converter.ui
@@ -53,6 +53,7 @@
             <child>
               <object class="ttk.Entry" id="file_location_text_box">
                 <property name="text" translatable="yes">File location</property>
+                <property name="textvariable">string:file_location_var</property>
                 <property name="validatecommand_args">validate_location</property>
                 <layout manager="grid">
                   <property name="propagate">True</property>
