--- a/converter.ui
+++ b/converter.ui
@@ -3,7 +3,7 @@
   <object class="tk.Toplevel" id="mainwindow">
     <property name="height">200</property>
     <property name="resizable">both</property>
-    <property name="title" translatable="yes">Hello World App</property>
+    <property name="title" translatable="yes">Image-Music Cryptography App</property>
     <property name="width">200</property>
     <child>
       <object class="ttk.Frame" id="frame_2">
@@ -21,7 +21,7 @@
             <property name="compound">top</property>
             <property name="cursor">arrow</property>
             <property name="takefocus">false</property>
-            <property name="text" translatable="yes">Hello! Input your Image/Audio</property>
+            <property name="text" translatable="yes">Hello! Input your Image/Audio file</property>
             <layout manager="pack">
               <property name="propagate">True</property>
               <property name="side">top</property>
